my-eks-tf/kyverno-policy/create-kyverno-test-ns-with-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/costcentre: "engineering"
    name: kyverno-testing
  name: kyverno-testing
