my-eks-tf/kyverno-policy/create-kyverno-test-ns-without-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: kyverno-testing
  name: kyverno-testing
